# logprise

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
logprise/: __init__.py  __init__.pyi  pytest_plugin.py
tests/: conftest.py  test_adding_add_method.py  test_apprise_cannot_handle_notification.py  test_atexit_does_not_flush_test_logs.py  test_caplog_integration.py  test_intercept_handler.py  test_logprise.py  test_periodic_flush.py  test_prevent_removal.py  test_pytest_plugin.py  test_pytest_sessionfinish_hook.py  test_setting_flush_interval.py  test_stupid_tests.py  test_utility_functions.py
